--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/QuanLyTK/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/QuanLyTK/Index.cshtml
@@ -97,7 +97,7 @@
                 @i
             </td>
             <td >            
-                @item.idQuyen
+                @item.Quyen.IdQuyen
             </td>
             <td >
                 @item.IdTTCN
