--- a/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/_leftMenu1.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/NguoiDung/_leftMenu1.cshtml
@@ -15,7 +15,7 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
+                    <a href="@Url.Action("Index","DotToChucHM")" class="d-flex">
                         <p>Đăng bài</p>
                     </a>
                 </li>
@@ -63,11 +63,6 @@
             <h4 class="widget_title">Bệnh viện</h4>
             <ul class="list cat-list">
                 <li>
-                    <a href="@Url.Action("EditBV","NhanVienYTe")" class="d-flex">
-                        <p>Cập nhật thông tin bệnh viện</p>
-                    </a>
-                </li>
-                <li>
                     <a href="@Url.Action("Index","NhanVienYTe") " class="d-flex">
                         <p>Cập nhật nhân viên</p>
                     </a>
@@ -83,13 +78,13 @@
                     </a>
                 </li>
                 <li>
-                    <a href="#" class="d-flex">
-                        <p>Xác nhận yêu cầu</p>
+                    <a href="@Url.Action("EditKQHM","NhanVienYTe")  " class="d-flex">
+                        <p>Cập nhật Kết quả hiến máu</p>
                     </a>
                 </li>
                 <li>
-                    <a href="@Url.Action("EditKQHM","NhanVienYTe")  " class="d-flex">
-                        <p>Cập nhật Kết quả hiến máu</p>
+                    <a href="#" class="d-flex">
+                        <p>Xác nhận yêu cầu</p>
                     </a>
                 </li>
                 <li>
