--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DTCHM/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DTCHM/Index.cshtml
@@ -28,13 +28,13 @@
             <div class="row">
                 <div class="col-lg-8 mb-5 mb-lg-0">
                     <div class="blog_left_sidebar">
-                        @foreach (var item in listDTCHM)
+                        @*@foreach (var item in listDTCHM)*@
                         {
                             <article class="blog_item">
                                 <div class="blog_item_img">
                                     <img class="card-img rounded-0" src="~/Assets/client/img/blog/single_blog_10.png" alt="" href="@Url.Action("ChiTietDTCHM","DTCHM", new { id = item.IdDTCHM })">
                                     <a class="blog_item_date">
-                                        <p>Thời gian : @Html.DisplayFor(model => item.ngayToChuc)</p>
+                                        <p>Thời gian: @Html.DisplayFor(model => item.ngayToChuc)</p>
                                     </a>
                                 </div>
                                 <div class="blog_details">
