--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DVLK/DKDVLK.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DVLK/DKDVLK.cshtml
@@ -46,7 +46,7 @@
                     </div>
 
                     <div>
-                        @using (Html.BeginForm("DKDVLK", "DVLK", new { @enctype = "multipart/form-data" }))
+                        @using (Html.BeginForm("DKDVLK", "DVLK", FormMethod.Post, new { @enctype = "multipart/form-data" }))
                         {
                             @Html.AntiForgeryToken()
                             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -110,10 +110,10 @@
                                         <table>
                                             <tr>
                                                 <th style="width:735px">
-                                                    <label>Minh chứng</label>
-                                                    <input name="file" id="exampleFile" type="file" class="form-control-file">
+                                                    <label for="exampleFile" class="">Minh chứng</label>
+                                                    <input name="file" id="exampleFile" type="file" class="form-control-file">                                                  
                                                     @*@Html.EditorFor(model => model.minhChung, new
-                                            { htmlAttributes = new { @class = "form-control", @name = "file", @id = "exampleFile", @type = "file" } })*@
+        { htmlAttributes = new { @class = "form-control", @name = "file", @id = "exampleFile", @type = "file" } })*@
 
                                                 </th>
                                             </tr>
